--- a/Drones/nbproject/project.properties
+++ b/Drones/nbproject/project.properties
@@ -32,7 +32,7 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.lwjgl.classpath}
+    ${libs.lwjgl-2.9.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -56,7 +56,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=drones.Drones
+main.class=DroneRunner
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
