--- a/Drones/nbproject/project.properties
+++ b/Drones/nbproject/project.properties
@@ -32,7 +32,8 @@ excludes=
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.lwjgl-2.9.classpath}
+    ${libs.lwjgl-2.9.classpath}:\
+    ${libs.Lwjgl.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
